# modern-cpp-tdd

./: .gitignore  .gitmodules  CMakeLists.txt  CharUtil.cpp  CharUtil.h  Makefile  README.md  Soundex.cpp  Soundex.h  SoundexTest.cpp  StringUtil.cpp  StringUtil.h
src/: CMakeLists.txt
src/include/: Soundex.hpp
src/src/: Soundex.cpp
tests/: CMakeLists.txt
tests/src/: SoundexTest.cpp
